<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GDSConHand</string>
    <string name="menu_back">Back</string>
    <string name="menu_info">Show Information</string>
    <string name="menu_help">Help</string>
    <string name="menu_exit">Exit App</string>
    <string name="menu_locate">Locate</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_view">View</string>
    <string name="menu_config">Preferences</string>
    <string name="menu_setting">Settings</string>
    <string name="setting_periodical_and_time_interval">PERIODICAL EVENTS and INTERVALS</string>
    <string name="setting_visual_parameters">VISUAL PARAMETERS</string>
    <string name="setting_signal_filter">WIFI FINGERPRINT FILTER</string>
    <string name="setting_server">SERVER</string>
    <string name="setting_save">SAVE</string>
    <string name="setting_reset">RELOAD</string>
    <string name="team">Team:</string>
    <string name="team_members">Team: Geoffrey Chen; Haley Shi; Larry Huang; Paddy Liu</string>
    <string name="done">Done</string>
    <string name="help">Help</string>
    <string name="neighbor_cell_forbidden">Unable to scan neighboring Cells!</string>
    <string name="neighbor_ap_forbidden">Unable to scan neighboring APs!</string>
    <string name="unsupport_network_mode">Unsupport Network!</string>
    <string name="no_sim">No Sim card or not register to network!</string>
    <string name="no_wifi_embeded">WIFI is not Embeded!</string>
    <string name="no_wifi_enabled">WIFI is not Enabled!</string>
    <string name="no_nfc_embeded">NFC is not Embeded!</string>
    <string name="no_nfc_enabled">NFC is not Enabled!</string>
    <string name="no_data_connection">No Data Connection!</string>
    <string name="server_unreachable">Server Unreachable!</string>
    <string name="no_http_connection">No HTTP Connection to Server!</string>
    <string name="wifi_connected_without_data_connection">No Internet Connection! Try to Authenticate WIFI or Connect to the CELL network! You may need to forget the current connected AP.</string>
    <string name="connected_without_data_connection">Failed to Connect to Server!</string>
    <string name="map">Map: </string>
    <string name="location">Location: </string>
    <string name="none">None.</string>
    <string name="edit_mode">EDIT MODE</string>
    <string name="view_mode">VIEW MODE</string>
    <string name="nfc_edit_mode">NFC/QR EDIT MODE</string>
    <string name="delete_fingerprint_mode">DELETE FINGERPRINT MODE</string>
    <string name="test_locate_mode">TEST LOCATE MODE</string>
    <string name="test_collect_mode">TEST COLLECT MODE</string>
    <string name="mode_change_to">Switch To</string>
    <string name="locating">Locating...</string>
    <string name="located">Located Successfully!</string>
    <string name="collecting">Fingerprint collecting。。。</string>
    <string name="collected">Fingerprint collected Successfully!</string>
    <string name="locate_collecting">Location Data collecting。。。</string>
    <string name="locate_collected">Location Data collected Successfully!</string>
    <string name="locate_base_on_nfc">Locating base on NFC/QR...</string>
    <string name="store_nfc_info_into_map">Storing NFC/QR data into this Map...</string>
    <string name="nfc_info_stored">NFC/QR data stored Successfully!</string>
    <string name="collect_ongoing_failure">Fingerprint collecting ongoing, please wait for seconds!</string>
    <string name="error_happens">Error Happens!</string>
    <string name="server_connect_timeout">Server Connect Timeout， Please check the Network!</string>
    <string name="lock_exit">LockScreen is not allowed, exit the App!</string>
    <string name="out_of_map_bound">Out of the Map bound!</string>
    <string name="get_data_dialog_title">Getting Data</string>
    <string name="get_data_dialog_content">Getting Data, please wait for a moment.</string>
    <string name="no_match_location">Locate failed, ensure the data was collected for this position!</string>
    <string name="start_collect">Collecting data, please do not move before you see next hint!</string>
    <string name="data_sending">Finish Data Collecting and now sendig data to server.</string>
    <string name="another_collect_ongoing">Another Scan ongoing, try again later!</string>
    <string name="last_nfc_scan_ongoing_failure">A NFC Scan ongoing, reject this one and cancel last one!</string>
    <string name="nfc_scan_finished">NFC Scan Finished!</string>
    <string name="loading_new_map">Loading New Map...</string>
    <string name="locate_current_map">Locate Current Map</string>
    <string name="load_selected_map">Load the selected Map</string>
    <string name="select_map">Select Map...</string>
    <string name="invalid_map">Invalid Map File!</string>
    <string name="map_sanity_rc_no_init_map_data">No Init Map Data!</string>
    <string name="map_sanity_rc_no_map_field_data">No Map Field Data!</string>
    <string name="location_not_in_this_map">Location Not in this Map!</string>
    <string name="map_file_broken">Map File Broken!</string>
    <string name="ok">OK</string>
    <string name="map_selector_updated">UPDATED</string>
    <string name="map_selector_outdated">OUTDATED</string>
    <string name="map_selector_downloading">DOWNLOADING</string>
    <string name="map_size">MAP Size:</string>
    <string name="version">Version:</string>
    <string name="oops">Oops!</string>
    <string name="map_outdated">Map Outdated， please update it!</string>
    <string name="auto_finish_no_wifi">No WIFI can be enabled, auto Exit the App after 10s!</string>
    <string name="auto_finish_no_server_ip">No Server IP, auto Exit the App after 10s!</string>
    <string name="retry_ip">Retrying to get the server IP!</string>
    <string name="no_latest_info">No Published Information!</string>
    <string name="start_scan_nfc">Please Scan the nearest NFC chip or QR Code!</string>
    <string name="scan_qr">Please Scan QR/Bar Code...</string>
    <string name="cancel_scan_qr">Cancel Scan</string>
    <string name="select_position_before_scan_qr">You need to select the position by long press on the map before click the scan button!</string>
    <string name="menu_scan_qr">Scan QR</string>
    <string name="no_wifi_samples">No WIFI Fingerprints Buffered!</string>
    <string name="press_back_more">Press Back again to quit from Indoor Map!</string>
    <string name="cancel">Cancel</string>
    <string name="config">Config</string>
    <string name="config_network">Network Configuration</string>
    <string name="mobile_2g_3g_to_wifi">Current Connection is via 2G/3G, you can connect to WIFI for better user experience!</string>
    <string name="mobile_no_wireless">No Data Connection, please turn the Mobile or WIFI connection ON!</string>
    <string name="delete_fingerprint_at_this_location">Delete all Fingerprints at this location!</string>
    <string name="confirm">PLEASE CONFIRM</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="confirm_self_location_set">Do you want to set this location as your current location?</string>
    <string name="confirm_wifi_collect">Do you want to collect WIFI Fingerprint for this location?</string>
    <string name="confirm_nfc_qr_collect">Do you want to bind NFC or QR Fingerprint for this location?</string>
    <string name="confirm_delete_fingerprint">Do you want to delete stored Fingerprints for this location?</string>
    <string name="confirm_test_locate">Do you want to test the locating for this location?</string>
    <string name="confirm_test_collect">Do you want to update the fingerprint on current location in test mode?</string>
    <string name="confirm_test_collect_again">The locate test base on current WIFI fingerprint is not quite good on current position, do you want to update the fingerprint on current location again in test mode?</string>
    <string name="need_a_selected_location">Need to long press a location firstly to select it as the context location!</string>
    <string name="map_out_of_date">The current map is out-of-date and can not be used!</string>
    <string name="load_complete">Map is loaded completely!</string>
    <string name="current_selected_location">Current selected location</string>
    <string name="query_apk_version">Querying Version of this App...</string>
    <string name="another_download_ongoing">Another download is ongoing, please retry later!</string>
    <string name="download_ongoing">Download is ongoing...</string>
    <string name="please_wait">Please wait...</string>
    <string name="wrong_server">Wrong Server Configuration or the Server is currently not Reachable!</string>
    <string name="audio_guide_title">Input auto guide audio no.</string>
    <string name="audio_guide_no">Audio Number</string>
    <string name="audio_no_not_exist">Audio number doesnt exist</string>
    <string name="play_audio_guide">Play</string>
    <string name="navi_from_to">Set Navigator</string>
    <string name="navi_from">FROM</string>
    <string name="navi_to">-TO-</string>
    <string name="navi_my_place">My Place</string>
    <string name="navi_my_place_unknown">My Place Unknown!</string>
    <string name="navi_no_node">No Nodes Defined for Navigator!</string>
    <string name="navi_go">GO</string>
    <string name="navi_node_select_wrong">Node are not selected correctly for Navigator!</string>
    <string name="navi_failed_no_data">No Data for Navigating!</string>
    <string name="navi_failed_no_route">No Route Defined!</string>
    <string name="navi_total_distance">Total Distance: </string>
    <string name="navi_distance">Distance: </string>
    <string name="navi_meter">M</string>
    <string name="navi_over">Navigating Finished!</string>
    <string name="navi_result">Navigating Result:</string>
    <string name="navi_end_navi">End Navigating</string>
    <string name="apk_current_version">Current Version:</string>
    <string name="apk_new_version">New Version:</string>
    <string name="apk_new_version_available">New Version Available</string>
    <string name="apk_update_or_not">upgrade?</string>
    <string name="latest_apk_version">Great, you have the latest Apk installed!</string>
    <string name="no_description">No Description Defined!</string>
    <string name="show_pic">Show Picture</string>
    <string name="download_file_failed">Download file failed!</string>
    <string name="share">Share</string>
    <string name="no_weibo_installed">Sina Weibo isnot installed</string>
    <string name="url_is_too_long">The URL is too long</string>
    <string name="share_prefix">I want to share with you </string>
    <string name="tts_language_unsupported">TTS is not supported in your device</string>
    <string name="tts_start_soon">Will play soon</string>
    <string name="search">Input the place</string>
    <string name="title_activity_event_viewer">EventViewerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_menuitem_list">MenuItems</string>
    <string name="title_menuitem_detail">MenuItem Detail</string>
    <string name="title_activity_playhouse_info">PlayhouseInfoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="download_now">Download</string>
    <string name="download_later">Later</string>
    <string name="title_activity_movie_info">MovieInfoActivity</string>
</resources>