<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">
    
	<Button android:id="@+id/locateButton"  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/locate_current_map"
	    android:gravity="center"/>
	
	<Button android:id="@+id/selectButton"  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/select_map"
	    android:gravity="center"/>
	
	<Button android:id="@+id/qrButton"  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/scan_qr"
	    android:gravity="center"/>
	
	<Button android:id="@+id/configButton"  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/menu_config"
	    android:gravity="center"/>
</LinearLayout>
