<?xml version="1.0" encoding="utf-8"?>
        
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:scrollbarAlwaysDrawVerticalTrack="false">

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    
	    <TextView
	            android:id="@+id/mapTitle"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/navbar"
	            android:gravity="center"
	            android:paddingBottom="10dp"
	            android:paddingTop="10dp"
	            android:text="@string/map"
	            android:textColor="@android:color/white"
	            android:textSize="18sp"
	            android:textStyle="bold" />

        <TextView
            android:id="@+id/mapInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    
	    <TextView
	            android:id="@+id/locationTitle"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:background="@drawable/navbar"
	            android:gravity="center"
	            android:paddingBottom="10dp"
	            android:paddingTop="10dp"
	            android:text="@string/location"
	            android:textColor="@android:color/white"
	            android:textSize="18sp"
	            android:textStyle="bold" />

        <TextView
            android:id="@+id/locationInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:textAppearance="?android:attr/textAppearanceSmall" />		
	
	</LinearLayout>
	
</ScrollView> 

